--- a/long -term- investment .ipynb
+++ b/long -term- investment .ipynb
@@ -2,13 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "8fc53050-1d43-4d68-8cad-958332d37df7",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import arff"
+    "import arff\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.metrics import classification_report\n",
+    "from sklearn.metrics import roc_curve\n",
+    "from sklearn.metrics import auc\n",
+    "from sklearn.metrics import precision_recall_curve\n",
+    "from sklearn.metrics import average_precision_score\n",
+    "from sklearn.metrics import f1_score\n",
+    "from sklearn.metrics import roc_auc_score\n",
+    "from sklearn.metrics import precision_score\n",
+    "from sklearn.metrics import recall_score\n",
+    "from sklearn.model_selection import cross_val_score                         "
    ]
   },
   {
@@ -653,9 +669,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base]",
+   "display_name": "base",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
