Update long -term- investment .ipynb

--- a/long -term- investment .ipynb
+++ b/long -term- investment .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "8fc53050-1d43-4d68-8cad-958332d37df7",
    "metadata": {},
    "outputs": [],
@@ -11,25 +11,12 @@
     "import arff\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "from sklearn.metrics import classification_report\n",
-    "from sklearn.metrics import roc_curve\n",
-    "from sklearn.metrics import auc\n",
-    "from sklearn.metrics import precision_recall_curve\n",
-    "from sklearn.metrics import average_precision_score\n",
-    "from sklearn.metrics import f1_score\n",
-    "from sklearn.metrics import roc_auc_score\n",
-    "from sklearn.metrics import precision_score\n",
-    "from sklearn.metrics import recall_score\n",
-    "from sklearn.model_selection import cross_val_score                         "
+    "import seaborn as sns   \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "id": "21c058b7-0f74-45ea-bf06-864de6cba506",
    "metadata": {},
    "outputs": [
@@ -62,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "06e3a50e-b80a-49f4-a88c-e0661ea4bb6c",
    "metadata": {},
    "outputs": [],
@@ -73,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "8f2d35da-b4ce-436e-bf5a-f54292ec9519",
    "metadata": {},
    "outputs": [
@@ -386,7 +373,7 @@
        "[11162 rows x 17 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "d244fbc6-b0b0-490d-ae96-caa2f9b91ecf",
    "metadata": {},
    "outputs": [
@@ -424,7 +411,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "2a17ed54-dda0-4243-b047-2d81af409fbb",
    "metadata": {},
    "outputs": [
@@ -478,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "id": "56c7096b-a3c1-48bd-aa1f-38382b361128",
    "metadata": {},
    "outputs": [
@@ -615,7 +602,7 @@
        "previous     58.0  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "id": "a64b373f-7695-417c-9573-777da0081aff",
    "metadata": {},
    "outputs": [
@@ -648,7 +635,7 @@
        "Length: 11162, dtype: bool"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,6 +649,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9583d4a7-b162-46f8-b5e6-5b91e67def78",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e0607ae",
    "metadata": {},
    "outputs": [],
    "source": []
